Bug 137209 - gtk3: "New Address List" dialog gets broken
Summary: gtk3: "New Address List" dialog gets broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-02 14:36 UTC by Stephan Bergmann
Modified: 2020-10-06 10:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Bergmann 2020-10-02 14:36:27 UTC
Originally reported as <https://github.com/flathub/org.libreoffice.LibreOffice/issues/132#issuecomment-702745904> "LibreOffice won't customize the mail merge menu."  Can reproduce on Linux with SAL_USE_VCLPLUGIN=gen with all of Flathub's LO 7.0.1.2 flatpak, libreoffice-6.4.6.2-1.fc32.x86_64, and a recent local build of master towards LO 7.1:  "File - New - Text Document", "Tools - Mail Merge Wizard... - Insert Address Block - Select Different Address List... - Create... - Customize...", select "Company Name" element, "Delete - OK": "New Address List" dialog starts to extend past the bottom of the screen, labels on the left are garbled, all edit fields but the final "Gender" refuse to take focus (also see the original report's <https://imgur.com/WSLz4pM>).

Works fine at least with SAL_USE_VCLPLUGIN=gen and SAL_USE_VCLPLUGIN=qt5 in my local build.
Comment 1 Stephan Bergmann 2020-10-02 14:42:42 UTC
(In reply to Stephan Bergmann from comment #0)
> Originally reported as
> <https://github.com/flathub/org.libreoffice.LibreOffice/issues/
> 132#issuecomment-702745904> "LibreOffice won't customize the mail merge
> menu."  Can reproduce on Linux with SAL_USE_VCLPLUGIN=gen with all of
[...]

can reproduce with SAL_USE_VCLPLUGIN=gtk3, I mean

> Works fine at least with SAL_USE_VCLPLUGIN=gen and SAL_USE_VCLPLUGIN=qt5 in
> my local build.
Comment 2 Commit Notification 2020-10-02 20:21:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8c8b6c6ab7e9016ccd5c7e2a7e5216d94e6e3613

tdf#137209 unparent widgets in fragment dtor

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2020-10-02 20:22:29 UTC
fixed in master, backport to 7-0 in gerrit
Comment 4 Commit Notification 2020-10-06 10:42:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a9291f02c6eb9aa97a287dd5a99ad4b4d9448572

tdf#137209 unparent widgets in fragment dtor

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.