tdf#137209 unparent widgets in fragment dtor

Change-Id: I819514fd2b97e2cc8daad71a7f3b0b27afe6136d